# yt-dlp-qt-gui

./: .codegraphrc  .gitignore  LICENSE  README.md  README_zh.md  build.py  config.py  dark_theme.qss  logo.icns  main.py  pyproject.toml  worker.py  yt-dlp-gui.spec  yt-dlp-qt-gui.spec
.github/workflows/: ci.yml  release.yml
docs/: creating_projects_uv.md
src/yt_dlp_gui/: __init__.py  __main__.py  components.py  config.py  database.py  dialogs.py  main.py  models.py  scheduler.py  utils.py  worker.py
tests/: conftest.py  test_main_window.py  test_scheduler.py  test_ui.py  test_ui_refactor.py  test_utils.py  test_worker.py
