[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dlp-qt-gui"
version = "0.2.0"
description = "现代化视频下载工具，基于 yt-dlp 和 PySide6"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
maintainers = [
    { name = "curry tang", email = "twn39@163.com" }
]
keywords = ["video", "download", "yt-dlp", "gui", "pyside6", "qt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "pyside6>=6.10.1",
    "qtawesome>=1.4.0",
    "yt-dlp>=2025.12.8",
    "click>=8.1.0",
]

[project.optional-dependencies]
packaging = [
    "pyinstaller>=6.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=7.0.0",
]

[project.scripts]
yt-dlp-qt-gui = "yt_dlp_gui:cli"

[project.urls]
Homepage = "https://github.com/twn39/yt-dlp-qt-gui"
Documentation = "https://github.com/twn39/yt-dlp-qt-gui#readme"
Repository = "https://github.com/twn39/yt-dlp-qt-gui"
Issues = "https://github.com/twn39/yt-dlp-qt-gui/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yt_dlp_gui = ["*.qss", "resources/*"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.8",
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["yt_dlp_gui"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]  # allow unused args in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
qt_api = "pyside6"

